Specify Package Requirements

--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,8 @@ channels:
 dependencies:
 - python>=3.6.5
 - taxcalc>=1.0.0
-- behresp
-- pandas
-- numpy
+- behresp>=0.6.0
+- pandas>=0.23
+- numpy>=1.13
 - pytest
 - dask
