--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -6,18 +6,18 @@ requirements:
   build:
     - python
     - "taxcalc>1.0.0"
-    - behresp
-    - pandas
+    - "behresp>=0.6.0"
+    - "pandas>=0.23"
     - dask
-    - numpy
+    - "numpy>=1.13"
 
 run:
   - python
   - "taxcalc>1.0.0"
-  - behresp
-  - pandas
+  - "behresp>=0.6.0"
+  - "pandas>=0.23"
   - dask
-  - numpy
+  - "numpy>=1.13"
 
 test:
   imports:
