--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -14,6 +14,7 @@ requirements:
     - "taxcalc>1.1.0"
     - "behresp>=0.7.0"
     - dask
+    - bokeh
 
 about:
   home: https://github.com/PSLmodels/Tax-Brain
