--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - conda config --set always_yes yes
   - conda update conda
   - conda create -n taxbrain-dev python=$TRAVIS_PYTHON_VERSION;
+  - conda init bash
   - conda activate taxbrain-dev
   - conda env update -f environment.yml
   - pip install -e .
