--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -8,12 +8,16 @@ requirements:
     - "taxcalc>1.1.0"
     - "behresp>=0.7.0"
     - dask
+    - paramtools
+    - marshmallow
 
   run:
     - python
     - "taxcalc>1.1.0"
     - "behresp>=0.7.0"
     - dask
+    - paramtools
+    - marshmallow
 
 about:
   home: https://github.com/PSLmodels/Tax-Brain
