--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -11,7 +11,7 @@ requirements:
 
   run:
     - python
-    - "taxcalc>2.2.0"
+    - "taxcalc>=2.2.0"
     - "behresp>=0.7.0"
     - dask
     - bokeh
