--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,7 @@
 name: taxbrain-dev
 channels:
 - PSLmodels
+- conda-forge
 dependencies:
 - python>=3.6.5
 - taxcalc>=2.2.0
@@ -10,5 +11,12 @@ dependencies:
 - pytest
 - dask
 - bokeh
+- markdown
+- cairo
+- pango
+- phantomjs
 - pip:
   - compdevkit
+  - tabulate
+  - weasyprint
+  - selenium
