--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,3 @@
-include taxbrain/report_text/report_template.md
+include taxbrain/report_files/report_template.md
+include taxbrain/report_files/report_style.css
+include taxbrain/report_files/taxbrain.png
