--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -22,6 +22,7 @@ requirements:
     - weasyprint
     - tabulate
     - selenium
+    - pypandoc
 
 about:
   home: https://github.com/PSLmodels/Tax-Brain
