--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
 - behresp>=0.9.0
 - pandas>=0.23
 - numpy>=1.13
+- paramtools>=0.10.1
 - pytest
 - dask
 - bokeh
@@ -19,6 +20,8 @@ dependencies:
 - weasyprint
 - selenium
 - pypandoc
+- nodejs
 - pip
 - pip:
   - cs-kit
+  
