--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,8 @@ channels:
 - conda-forge
 dependencies:
 - python>=3.6.5
-- taxcalc>=2.5.0
-- behresp>=0.9.0
+- taxcalc>=3.0.0
+- behresp>=0.11.0
 - pandas>=0.23
 - numpy>=1.13
 - paramtools>=0.10.1
@@ -13,14 +13,9 @@ dependencies:
 - dask
 - bokeh
 - markdown
-- cairo
-- pango
 - tabulate
-- selenium
 - pypandoc
-- nodejs
 - pip
-- geckodriver
-- firefox
+- matplotlib
 - pip:
   - cs-kit
