--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
+          apt-get install texlive
           pip install -e .
           pip install pytest-cov
           pip install pytest-pycodestyle
