--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,16 +21,10 @@ jobs:
           environment-file: environment.yml
           python-version: ${{ matrix.python-version }}
           auto-activate-base: false
-      - name: Install TeXLive
-        uses: xu-cheng/texlive-action/full@v1
-        with:
-          run: |
-            apk add make
-            make
       - name: Build
         shell: bash -l {0}
         run: |
-          apt-get install texlive
+          pip install pdflatex
           pip install -e .
           pip install pytest-cov
           pip install pytest-pycodestyle
