two installs on one line

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,8 +24,7 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
-          sudo apt-get install texlive
-          sudo apt-get install texlive-latex-extra
+          sudo apt-get install texlive texlive-latex-extra
           pip install -e .
           pip install pytest-cov
           pip install pytest-pycodestyle
