make note on marker

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,4 @@
 testpaths =
     taxbrain
 markers =
-    local
+    local: marks tests that run locally and not on GH Actions (mostly due to run time)
