--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
+          sudo apt update
           sudo apt-get install texlive texlive-latex-extra
           pip install -e .
           pip install pytest-cov
