--- a/.github/workflows/check_jupyterbook.yml
+++ b/.github/workflows/check_jupyterbook.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           activate-environment: taxbrain-dev
           environment-file: environment.yml
-          python-version: 3.7
+          python-version: "3.10"
           auto-activate-base: false
 
       - name: Build # Build Jupyter Book
