--- a/.github/workflows/deploy_jupyterbook.yml
+++ b/.github/workflows/deploy_jupyterbook.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy Jupyter Book
 on:
   push:
-    branches:    
+    branches:
       - master
 jobs:
   build-and-deploy:
@@ -18,7 +18,7 @@ jobs:
         with:
           activate-environment: taxbrain-dev
           environment-file: environment.yml
-          python-version: 3.7
+          python-version: "3.10"
           auto-activate-base: false
 
       - name: Build # Build Jupyter Book
