--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,6 +15,10 @@ jobs:
         uses: actions/checkout@master
         with:
           persist-credentials: false
+      - name: Install TeX Live
+          uses: zauguin/install-texlive@v3
+          with:
+             package_file: tl_packages
       - name: Setup Miniconda using Python ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2
         with:
@@ -25,8 +29,6 @@ jobs:
       - name: Build
         shell: bash -l {0}
         run: |
-          sudo apt update
-          sudo apt-get install texlive texlive-latex-extra
           pip install -e .
           pip install pytest-cov
           pip install pytest-pycodestyle
