try diff texlive install

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,10 +15,13 @@ jobs:
         uses: actions/checkout@master
         with:
           persist-credentials: false
-      - name: Install TeX Live
-        uses: zauguin/install-texlive@v3
+      - name: Setup TeX Live
+        uses: teatimeguest/setup-texlive-action@v3
         with:
-          package_file: tl_packages
+          packages: >-
+            scheme-basic
+            cleveref
+            hyperref
       - name: Setup Miniconda using Python ${{ matrix.python-version }}
         uses: conda-incubator/setup-miniconda@v2
         with:
