--- a/.github/workflows/check_jupyterbook.yml
+++ b/.github/workflows/check_jupyterbook.yml
@@ -23,5 +23,6 @@ jobs:
         run: |
           pip install jupyter-book
           pip install -e .
+          python -m ipykernel install --user --name=taxbrain-dev
           cd docs
           jb build ./book
