--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -53,7 +53,7 @@ jobs:
         shell: bash -l {0}
         working-directory: ./
         run: |
-          pytest --cov=./ --cov-report=xml
+          pytest -m 'not requires_pufcsv and not requires_tmdcsv' --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         if: matrix.os == 'ubuntu-latest' && contains(github.repository, 'PSLmodels/Tax-Brain')
         uses: codecov/codecov-action@v4
