--- a/docs/book/_config.yml
+++ b/docs/book/_config.yml
@@ -34,6 +34,7 @@ binder:
 
 launch_buttons:
   notebook_interface     : 'classic'  # The interface interactive links will activate ["classic", "jupyterlab"]
+  colab_url              : "https://colab.research.google.com"
   # binderhub_url          : https://mybinder.org  # The URL of the BinderHub (e.g., https://mybinder.org)
   # jupyterhub_url         : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
   # thebelab               : false  # Add a thebelab button to pages (requires the repository to run on Binder)
