--- a/.github/workflows/deploy_jupyterbook.yml
+++ b/.github/workflows/deploy_jupyterbook.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build # Build Jupyter Book
         shell: bash -l {0}
         run: |
-          pip install jupyter-book
+          pip install "jupyter-book<2.0.0"
           pip install -e .
           python -m ipykernel install --user --name=taxbrain-dev
           cd docs
